fix air message